# Home_Work_20_1

./: README.md  data.json  pyproject.toml
config/: settings.py
shop/: admin.py  models.py
shop/management/commands/: fill_db.py
shop/migrations/: 0001_initial.py  0002_category_created_at_alter_category_description.py  0003_alter_product_options.py  0004_alter_category_options.py
