[tool.poetry]
name = "home-work-20-1"
version = "0.1.0"
description = ""
authors = ["Alexey Grazhdankin <alex.alexxx56@gmail.com>"]
readme = "README.md"
packages = [{include = "home_work_20_1"}]

[tool.poetry.dependencies]
python = "3.11.4"
django = "^4.2.3"
pillow = "^10.0.0"
ipython = "^8.14.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
